@@ -470,8 +470,7 @@ newton_polygon(GEN p, long k)
   double *logcoef, slope;
   long n = degpol(p), i, j, h, l, *vertex;
 
-  init_dalloc();
-  logcoef = (double*)stack_malloc((n+1)*sizeof(double));
+  logcoef = (double*)stack_malloc_align((n+1)*sizeof(double), sizeof(double));
   vertex = (long*)new_chunk(n+1);
 
   /* vertex[i] = 1 if i a vertex of convex hull, 0 otherwise */
@@ -1450,8 +1449,7 @@ split_2(GEN p, long bit, GEN ctr, double thickness, GEN *F, GEN *G)
   long n = degpol(p), i, j, k, bit2;
   double lrmin, lrmax, lrho, *radii;
 
-  init_dalloc();
-  radii = (double*) stack_malloc((n+1) * sizeof(double));
+  radii = (double*) stack_malloc_align((n+1) * sizeof(double), sizeof(double));
 
   for (i=2; i<n; i++) radii[i] = UNDEF;
   aux = thickness/(double)(4 * n);
