@@ -4649,6 +4649,7 @@ INLINE long   smodis(GEN x, long y);
 INLINE long   smodss(long x, long y);
 INLINE void   stackdummy(pari_sp av, pari_sp ltop);
 INLINE char  *stack_malloc(size_t N);
+INLINE char  *stack_malloc_align(size_t N, long k);
 INLINE char  *stack_calloc(size_t N);
 INLINE GEN    stoi(long x);
 INLINE GEN    stor(long x, long prec);
