@@ -108,6 +108,7 @@ BA   45- new GP function galoisconjclasses
       znstar_get_pe, znstar_get_Ui, checkznstar_i
      49- [libpari] coreu_fact, moebiusu_fact
      50- [libpari] ZabM_ker, ZabM_indexrank, ZabM_inv, ZabM_pseudoinv,
+BA   51- [libpari] stack_malloc_align
 
   Changed
       1- rewrite bnfnarrow
